feat: getHousesList method for get all house